--- a/resume.html
+++ b/resume.html
@@ -22,32 +22,39 @@
     <h2>About Me</h2>
     <p>I am a passionate software engineer with 2 years of experience. I specialize in developing scalable web applications and solving complex problems through code. I have expertise in JavaScript, Python, and Java, and I am always eager to learn new technologies.</p>
   </section>
-
+<hr>
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
       <h3>Project 1</h3>
-      <p>Description of Project 1.</p>
-      <a href="#">View Project</a>
+      <p>Developed a fully functional e-commerce website using Javascript, CSS & HTML for a user-friendly experience purchasing fashion apparel. Implemented user authentication, data validation, and front-end design.</p>
+      <a href="https://the100store.com/">View Project</a>
     </div>
     <div class="project">
       <h3>Project 2</h3>
-      <p>Description of Project 2.</p>
+      <p>Created a recommendation system using API to provide recommendations for users looking to cook a brand new meal at home. Created the application using React and allowing users to utilize CRUD.</p>
       <a href="#">View Project</a>
     </div>
+    <div class="project">
+        <h3>Project 3</h3>
+        <p>Blackjack Game: Built an application in the form of Blackjack, utilizing API for a randomized deck of cards that are playable for the user and the dealer. This application was made with Javascript, HTML & CSS.
+        </p>
+        <a href="#">View Project</a>
+      </div>
   </section>
+  <hr>
 
   <section id="contact">
     <h2>Contact Me</h2>
     <p>If you're interested in collaborating or have any inquiries, feel free to reach out to me:</p>
     <ul>
-      <li>Email: john.doe@example.com</li>
-      <li>Phone: (123) 456-7890</li>
+      <li>Email: kevbrown404@gmail.com</li>
+      <li>Phone: (404) 578-7343</li>
     </ul>
   </section>
 
   <footer>
-    <p>&copy; 2023 John Doe. All rights reserved.</p>
+    <p>&copy; 2023 Kevin Brown. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
